public/styles.css
.check-icon.dark {
  fill: #070708;
}

.check-icon.white {
  fill: #F5F5F5;
}

.check-icon.xs {
  width: 12.8px;
  height: 12.8px;
}

.check-icon.sm {
  width: 16px;
  height: 16px;
}

.check-icon.md {
  width: 20px;
  height: 20px;
}

/*****************************************************************************/
/*                                                                           */
/*                            MARK: APP MENU                                 */
/*                                                                           */
/*****************************************************************************/

#app-menu {
  width: 100%;
  height: 100%;
}

.app-menu-trigger {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.icon-container {
  cursor: pointer;
  background: #000000;
  padding: 10px;
  width: 100%;
  height: 100%;
  color: #757C82;
  transition: all 0.2s ease;

  display: grid;
  place-items: center;
}

.app-menu-trigger:hover .icon-container {
  color: #F5F5F5;
}

.app-menu-icon {
  width: 24px;
  height: 24px;
}

.app-menu-popover {
  position: absolute;
  top: 90%;
  left: 10%;
  width: 256px;
  background: #242424;
  padding: 10px;
  border-radius: 8px;
  box-shadow: 0px 20px 30px 5px rgba(0, 0, 0, 0.5);
  z-index: 1000;

  transition-property: opacity, scale;
  transition-duration: 200ms;
  transition-timing-function: ease;
  transform-origin: top left;

  opacity: 0;
  scale: 0.9;
}

.app-menu-popover.show-app-menu {
  opacity: 1;
  scale: 1;
}

.app-menu-drawer {
  position: absolute;
  display: flex;
  align-items: flex-end;
  top: 0;
  height: 100vh;
  width: 100vw;
  backdrop-filter: blur(10px);
  z-index: 1000;

  transition-property: opacity, scale;
  transition-duration: 200ms;
  transition-timing-function: ease;
  transform-origin: bottom center;

  opacity: 0;
  scale: 0.99;
}

.app-menu-drawer.show-app-menu {
  opacity: 1;
  scale: 1;
}

.app-menu-drawer-content {
  width: 100%;
  background: #242424;
  padding: 24px 16px 14px;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
}

.app-list {
  display: flex;
  flex-direction: column;
}

.app-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 8px;
}

.app-item.sm {
  padding: 12px 16px;
}
.app-item.sm:not(:last-child) { 
  margin-bottom: 4px;
}

.app-item.md {
  padding: 22px 16px;
}

.app-item.current {
  background: #070708;
}

.app-item.link:hover {
  background: #383D42;
}

.app-logo {
  height: 20px;
  min-height: 20px;
}

/*****************************************************************************/
/*                                                                           */
/*                MARK: TERMS OF USE AND PRIVACY POLICY                      */
/*                                                                           */
/*****************************************************************************/

.initia-terms {
  position: absolute;
  display: flex;
  top: 0;
  height: 100vh;
  width: 100vw;
  backdrop-filter: blur(10px);
  z-index: 1000;
  font-family: "Pilat Wide";

  align-items: center;
  justify-content: center;
  transform-origin: center center;
}

.initia-terms[data-screen-size="sm"] {
  align-items: end;
  transform-origin: bottom center;
}

.initia-terms.accepted {
  scale: 0.9;
  opacity: 0;

  transition-property: opacity, scale;
  transition-duration: 200ms;
  transition-timing-function: ease;
}

.terms-container {
  background: #161717;
  border: 1px solid #303437;
  border-radius: 20px;

  font-weight: 500;
  color: #757C82;
  overflow-y: scroll;

  padding: 24px;
  font-size: 12px;
}

.initia-terms[data-screen-size="sm"] .terms-container {
  height: 80%;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.initia-terms[data-screen-size="md"] .terms-container {
  height: 90%;
  max-height: 577px;
  width: 620px;
}

.initia-terms[data-screen-size="lg"] .terms-container {
  height: 90%;
  max-height: 830px;
  width: 960px;
  padding: 32px;

  font-size: 14px;
}

.terms-header {
  font-weight: 600;
  color: #F5F5F5;
}

.initia-terms[data-screen-size="sm"] .terms-header {
  font-size: 14px;
}

.initia-terms[data-screen-size="md"] .terms-header {
  font-size: 18px;
}

.initia-terms[data-screen-size="lg"] .terms-header {
  font-size: 24px;
}

.info-icon {
  width: 12px;
  height: 12px;
}

.initia-terms[data-screen-size="lg"] .info-icon {
  width: 14px;
  height: 14px;
}

.terms-description {
  margin-top: 4px;
  display: flex;
  gap: 8px;
  align-items: center;

  line-height: 12px;
}

.terms-body {
  margin-top: 24px;
  padding: 20px;
  border: 1px solid #383D42;
  border-radius: 8px;
  overflow-y: auto;

  height: 355px;
}

.initia-terms[data-screen-size="lg"] .terms-body {
  height: 528px;
  font-size: 14px;
}

.terms-body a {
  color: #A1A6AA;
}

.terms-body a:hover {
  color: #D1D9E0;
}

.terms-body-topic {
  margin-bottom: 4px;
  color: #D1D9E0;
  font-weight: 600;
}

.initia-terms[data-screen-size="md"] .terms-body-topic {
  font-size: 14px;
}

.initia-terms[data-screen-size="lg"] .terms-body-topic {
  font-size: 16px;
}

.terms-body p:nth-child(even) {
  margin-top: 18px;
}

.terms-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
  margin-top: 32px;
}

.initia-terms[data-screen-size="lg"] .terms-footer {
  gap: 16px;
  margin-top: 48px;
}

.terms-checkbox {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  margin-left: auto;
  margin-right: auto;
  cursor: pointer;
}

.terms-checkbox-box {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border: 1px solid #757C82;
  border-radius: 2px;

  background-color: #161717;
}

.terms-checkbox:hover .terms-checkbox-box {
  border-color: #F5F5F5;
}

.terms-footer.checked .terms-checkbox-box {
  background-color: #F5F5F5;
  border-color: #F5F5F5;
}

.terms-checkbox-label {
  line-height: 16px;
  cursor: pointer;
}

.terms-accept-button {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 8px;

  color: #070708;
  font-weight: 600;

  cursor: not-allowed;
  background-color: #757C82;
}

.initia-terms[data-screen-size="sm"] .terms-accept-button {
  height: 56px;
  width: 100%;
  font-size: 14px;
}

.initia-terms[data-screen-size="md"] .terms-accept-button {
  height: 32px;
  width: 168px;
  font-size: 12px;
}

.initia-terms[data-screen-size="lg"] .terms-accept-button {
  height: 56px;
  width: 360px;
  font-size: 16px;
}

.terms-footer.checked .terms-accept-button {
  cursor: pointer;
  background-color: #F5F5F5;
}

.terms-footer.checked .terms-accept-button:hover {
  background-color: white;
}

